force-app/main/default/objects/Apttus_Config2__PriceMatrix__c/fields/Apttus_Config2__Dimension3Id__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Dimension3Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the third dimension</description>
    <label>Dimension 3</label>
    <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
    <relationshipLabel>Price Matrices (Dimension 3)</relationshipLabel>
    <relationshipName>PriceMatrices3</relationshipName>
    <type>Lookup</type>
</CustomField>