force-app/main/default/objects/Apttus_Config2__PriceMatrix__c/fields/Apttus_Config2__Dimension4Id__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Dimension4Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the fourth dimension</description>
    <label>Dimension 4</label>
    <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
    <relationshipLabel>Price Matrices (Dimension 4)</relationshipLabel>
    <relationshipName>PriceMatrices4</relationshipName>
    <type>Lookup</type>
</CustomField>