force-app/main/default/objects/Apttus_Config2__PriceMatrix__c/fields/Apttus_Config2__Dimension4ValueType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Dimension4ValueType__c</fullName>
    <description>The value type of the fourth dimension</description>
    <label>Dimension 4 Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Discrete</fullName>
            </value>
            <value>
                <fullName>Range</fullName>
            </value>
            <value>
                <fullName>Cumulative Range</fullName>
            </value>
            <value>
                <fullName>Cumulative Range - Line Item</fullName>
            </value>
            <value>
                <fullName>Weighted Range</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>