force-app/main/default/objects/Apttus_Config2__PriceMatrix__c/fields/Apttus_Config2__Dimension5Id__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Dimension5Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the fifth dimension</description>
    <label>Dimension 5</label>
    <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
    <relationshipLabel>Price Matrices (Dimension 5)</relationshipLabel>
    <relationshipName>PriceMatrices5</relationshipName>
    <type>Lookup</type>
</CustomField>