force-app/main/default/objects/Apttus_Config2__PriceMatrix__c/fields/Apttus_Config2__InitialRows__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__InitialRows__c</fullName>
    <defaultValue>5</defaultValue>
    <description>The number of initial rows in the matrix</description>
    <label>Initial Rows</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>