force-app/main/default/objects/Apttus_Config2__PriceMatrix__c/fields/Apttus_Config2__IsCumulativeRange__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsCumulativeRange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the range dimension values are cumulative. This field is deprecated. Use the Cumulative Range value type instead.</description>
    <label>Is Cumulative Range (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>