force-app/main/default/objects/Apttus_Config2__PriceMatrix__c/fields/Apttus_Config2__NumberOfEntries__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__NumberOfEntries__c</fullName>
    <description>Indicates the number of entries associated with the price matrix</description>
    <label>Number Of Entries</label>
    <summaryForeignKey>Apttus_Config2__PriceMatrixEntry__c.Apttus_Config2__PriceMatrixId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>