force-app/main/default/objects/Apttus_Config2__PriceMatrix__c/fields/Apttus_Config2__StopProcessingMoreMatrices__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__StopProcessingMoreMatrices__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to prevent subsequent matrices from processing.</description>
    <label>Stop Processing More Matrices</label>
    <type>Checkbox</type>
</CustomField>